--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<header class="app-header">
+ <mat-toolbar>
+        <img src="../../../assets/images/logo.png" alt="Logo Jornada">
+        <span class="spacer"></span>
+        <button mat-button>Vender Milhas</button>
+        <button mat-button>Sobre</button>
+        <button mat-raised-button>CADASTRE-SE</button>
+        <button mat-stroked-button>Login</button>
+ </mat-toolbar>
+</header>
