--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,6 +2,7 @@
 
     button{
         margin: 0 16px;
+        color: white;
     }
 
     .spacer {
@@ -10,13 +11,11 @@
     
     .mat-toolbar{
         background-color: black;
-        color: white;
         padding: 10px 256px;
     }
     
     .mat-mdc-raised-button:not(:disabled){
         background-color: rgb(91, 43, 136);
-        color: white;
         padding: 5px 10px;
         border-radius: 5px;
     }
@@ -25,5 +24,6 @@
         border-width: 1px;
         padding: 4.1px;
         border-radius: 5px;
+        border-color: white;
     }
 }
