--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
         <span class="spacer"></span>
         <button mat-button>Vender Milhas</button>
         <button mat-button>Sobre</button>
-        <button mat-raised-button>CADASTRE-SE</button>
+        <button mat-flat-button color="primary">CADASTRE-SE</button>
         <button mat-stroked-button>Login</button>
  </mat-toolbar>
 </header>
