Modal de passagens

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,9 @@
 <footer class="app-footer">
+    <app-banner
+        src="../../../assets/images/banner-homepage-rodape.png"
+        alt="Banner rodape da aplicação"
+    ></app-banner>
+
     <app-container>
         <div class="inner">
             <ul>
