--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -6,7 +6,7 @@
               <mat-button-toggle>IDA E VOLTA</mat-button-toggle>
               <mat-button-toggle>SOMENTE IDA</mat-button-toggle>
             </mat-button-toggle-group>
-            <mat-chip-listbox aria-label="Seleção de passagem">
+            <mat-chip-listbox (click)="openDialog()" aria-label="Seleção de passagem">
                 <mat-chip-option selected>1 adulto</mat-chip-option>
                 <mat-chip-option>Econômica</mat-chip-option>
             </mat-chip-listbox>
