--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -6,10 +6,16 @@
               <mat-button-toggle>IDA E VOLTA</mat-button-toggle>
               <mat-button-toggle>SOMENTE IDA</mat-button-toggle>
             </mat-button-toggle-group>
-            <mat-chip-listbox (click)="openDialog()" aria-label="Seleção de passagem">
-                <mat-chip-option selected>1 adulto</mat-chip-option>
-                <mat-chip-option>Econômica</mat-chip-option>
-            </mat-chip-listbox>
+            <mat-chip (click)="serviceForm.openDialog()">
+                <div class="inner">
+                  <mat-icon>check</mat-icon> 1 adulto
+                </div>
+              </mat-chip>
+            <mat-chip (click)="serviceForm.openDialog()">
+                <div class="inner">
+                  <mat-icon>check</mat-icon> Econômica
+                </div>
+            </mat-chip>
         </div>
         <div class="flex-container">
             <app-dropdown-uf label="Origem" matPrefix="flight_takeoff" [control]="serviceForm.obterControle('origem')"></app-dropdown-uf>
