--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -36,14 +36,18 @@
                 <li><strong>Categoria</strong></li>
                 <li>
                     <mat-chip-listbox aria-label="Seleção de passagem">
-                        <mat-chip-option>Executiva</mat-chip-option>
-                        <mat-chip-option>Econômica</mat-chip-option>
+                        <mat-chip-option value="Econômica" [selected]="service.formulario.get('tipo')?.value === 'Econômica'"
+                            (selectionChange)="service.alterarTipo($event, 'Econômica')"
+                        >Econômica</mat-chip-option>
+                        <mat-chip-option value="Executiva" [selected]="service.formulario.get('tipo')?.value === 'Executiva'"
+                            (selectionChange)="service.alterarTipo($event, 'Executiva')"
+                        >Executiva</mat-chip-option>
                     </mat-chip-listbox>
                 </li>
             </ul>
         </div>
     </mat-dialog-content>
     <mat-dialog-actions class="modal-actions">
-        <button mat-flat-button color="primary">BUSCAR</button>
+        <button mat-dialog-close mat-flat-button color="primary">BUSCAR</button>
     </mat-dialog-actions>
 </section>
