--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,53 +1,47 @@
 <section class="modal">
-    <h2 mat-dialog-title>Viajantes</h2>
-    <mat-dialog-content>
-        <div class="selecao-idade">
-            <ul>
-                <li><strong>Adultos</strong></li>
-                <li>(Acima de 12 anos)</li>
-                <li>
-                    <app-botao-controle operacao="decremento"></app-botao-controle>
-                    <span>1</span>
-                    <app-botao-controle operacao="incremento"></app-botao-controle>
-                </li>
-            </ul>
-            <ul>
-                <li><strong>Crianças</strong></li>
-                <li>(Entre 2 e 11 anos)</li>
-                <li>
-                    <app-botao-controle operacao="decremento"></app-botao-controle>
-                    <span>1</span>
-                    <app-botao-controle operacao="incremento"></app-botao-controle>
-                </li>
-            </ul>
-            <ul>
-                <li><strong>Bebês</strong></li>
-                <li>(Até 2 anos)</li>
-                <li>
-                    <app-botao-controle operacao="decremento"></app-botao-controle>
-                    <span>1</span>
-                    <app-botao-controle operacao="incremento"></app-botao-controle>
-                </li>
-            </ul>
-        </div>
+  <h2 mat-dialog-title>Viajantes</h2>
+  <mat-dialog-content>
+    <div class="selecao-idade">
+      <app-seletor-passageiro
+        [formControl]="service.obterControle('adultos')"
+        passageiro="Adultos"
+        descricaoIdade="(Acima de 12 anos)"
+      ></app-seletor-passageiro>
+      <app-seletor-passageiro
+        [formControl]="service.obterControle('criancas')"
+        passageiro="Crianças"
+        descricaoIdade="(Entre 2 e 11 anos)"
+      ></app-seletor-passageiro>
+      <app-seletor-passageiro
+        [formControl]="service.obterControle('bebes')"
+        passageiro="Bebês"
+        descricaoIdade="(Até de 2 anos)"
+      ></app-seletor-passageiro>
+    </div>
 
-        <div class="selecao-categoria">
-            <ul>
-                <li><strong>Categoria</strong></li>
-                <li>
-                    <mat-chip-listbox aria-label="Seleção de passagem">
-                        <mat-chip-option value="Econômica" [selected]="service.formulario.get('tipo')?.value === 'Econômica'"
-                            (selectionChange)="service.alterarTipo($event, 'Econômica')"
-                        >Econômica</mat-chip-option>
-                        <mat-chip-option value="Executiva" [selected]="service.formulario.get('tipo')?.value === 'Executiva'"
-                            (selectionChange)="service.alterarTipo($event, 'Executiva')"
-                        >Executiva</mat-chip-option>
-                    </mat-chip-listbox>
-                </li>
-            </ul>
-        </div>
-    </mat-dialog-content>
-    <mat-dialog-actions class="modal-actions">
-        <button mat-dialog-close mat-flat-button color="primary">BUSCAR</button>
-    </mat-dialog-actions>
+    <div class="selecao-categoria">
+      <ul>
+        <li><strong>Categoria</strong></li>
+        <li>
+          <mat-chip-listbox aria-label="Seleção de passagem">
+            <mat-chip-option
+              value="Econômica"
+              [selected]="service.formulario.get('tipo')?.value === 'Econômica'"
+              (selectionChange)="service.alterarTipo($event, 'Econômica')"
+              >Econômica</mat-chip-option
+            >
+            <mat-chip-option
+              value="Executiva"
+              [selected]="service.formulario.get('tipo')?.value === 'Executiva'"
+              (selectionChange)="service.alterarTipo($event, 'Executiva')"
+              >Executiva</mat-chip-option
+            >
+          </mat-chip-listbox>
+        </li>
+      </ul>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions class="modal-actions">
+    <button mat-dialog-close mat-flat-button color="primary">BUSCAR</button>
+  </mat-dialog-actions>
 </section>
