--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="app-header">
  <mat-toolbar>
-        <img src="../../../assets/images/logo.png" alt="Logo Jornada">
+       <button routerLink="/" mat-button><img src="../../../assets/images/logo.png" alt="Logo Jornada"></button>
         <span class="spacer"></span>
         <button mat-button>Vender Milhas</button>
         <button mat-button>Sobre</button>
         <button mat-flat-button color="primary">CADASTRE-SE</button>
-        <button mat-stroked-button>Login</button>
+        <button routerLink="/login" mat-stroked-button>Login</button>
  </mat-toolbar>
 </header>
