--- a/src/app/shared/dropdown-uf/dropdown-uf.component.html
+++ b/src/app/shared/dropdown-uf/dropdown-uf.component.html
@@ -1,8 +1,8 @@
 <mat-form-field class="input-container" appearance="outline">
   <mat-label>{{ label }}</mat-label>
-  <mat-icon matPrefix>{{ matPrefix }}</mat-icon>
+  <mat-icon matPrefix *ngIf="matPrefix">{{ matPrefix }}</mat-icon>
   <input matInput [matAutocomplete]="auto"
-    placeholder="Origem"
+    [placeholder]="placeholder"
     [formControl]="control"
     [name]="label"
     ngDefaultControl
