Exibindo dados do usuario na tela de perfil

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -5,5 +5,5 @@
   [tituloBotao]="tituloBotao"
   (acaoClique)="atualizar()"
   (deslogarClique)="deslogar()"
-  [titulo]="titulo"
+  [titulo]="titulo + nome"
 ></app-form-base>
