--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,14 +25,15 @@
                         <mat-label>Senha</mat-label>
                         <input formControlName="senha" matInput type="password" placeholder="Digite sua senha">
                         <mat-error *ngIf="loginForm.get('senha')?.errors?.['required']">Senha é obrigatória</mat-error>
-                        <mat-error *ngIf="loginForm.get('senha')?.errors?.['pattern']">A senha deve conter no mínimo 5 caracteres com pelo menos uma letra maiuscula e um numero</mat-error>
+                        <mat-error *ngIf="loginForm.get('senha')?.errors?.['minlength']"
+                        >A senha deve conter no mínimo 4 caracteres</mat-error>
                     </mat-form-field>
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-flat-button color="primary" (click)="login()" [disabled]="loginForm.invalid">ACESSAR MINHA CONTA</button>
                 </mat-card-actions>
                 <p>Ainda não possui conta ? 
-                    <a><Strong><u>Clique aqui para se cadastrar!</u></Strong></a>
+                    <a routerLink="/cadastro"><Strong><u>Clique aqui para se cadastrar!</u></Strong></a>
                 </p>
             </form>
         </div>
