--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,4 +1,7 @@
-<app-banner> </app-banner>
+<app-banner
+  src="../../../assets/images/banner-perfil.png"
+  alt="Banner de perfil"
+></app-banner>
 
 <app-form-base
   [perfilComponent]="perfilComponent"
