Header de pessoa logada e deslogada

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -13,6 +13,14 @@
         background-color: black;
         padding: 10px 256px;
     }
+
+    .links-toolbar > * {
+        margin-right: 20px;
+    }
+    
+    .links-toolbar > *:first-child {
+        margin-right: 0;
+    }
     
     .mat-mdc-outlined-button{
         border-width: 1px;
