--- a/src/app/shared/form-busca/filtros-complementares/precos/precos.component.html
+++ b/src/app/shared/form-busca/filtros-complementares/precos/precos.component.html
@@ -3,14 +3,14 @@
     <div class="labels">
       <div class="label-container">
         <label for="preco-minimo" class="name-label">De</label>
-        <p>{{ precoMin | currency:'BRL' }}</p>
+        <p>{{ servicePassagem.precoMin | currency:'BRL' }}</p>
       </div>
       <div class="label-container">
         <label for="preco-maximo">Até</label>
-        <p>{{ precoMax | currency:'BRL' }}</p>
+        <p>{{ servicePassagem.precoMax | currency:'BRL' }}</p>
       </div>
     </div>
-    <mat-slider [min]="precoMin" [max]="precoMax">
+    <mat-slider [min]="servicePassagem.precoMin" [max]="servicePassagem.precoMax">
       <input id="preco-minimo" matSliderStartThumb>
       <input id="preco-maximo" matSliderEndThumb>
     </mat-slider>
