--- a/src/app/shared/form-busca/filtros-complementares/filtros-complementares.component.html
+++ b/src/app/shared/form-busca/filtros-complementares/filtros-complementares.component.html
@@ -2,7 +2,7 @@
     <app-card>
         <div class="cabecalho">
             <h4>Filtro</h4>
-            <button mat-stroked-button type="button" >
+            <button mat-stroked-button type="button" (click)="limparFiltro()">
                 <mat-icon>backspace</mat-icon>
                 Limpar
             </button>
