Refatoração usando ESLint

--- a/src/app/shared/card-depoimento/card-depoimento.component.html
+++ b/src/app/shared/card-depoimento/card-depoimento.component.html
@@ -1,6 +1,6 @@
 <mat-card class="depoimento">
     <mat-card-content>
-        <img mat-card-sm-image src="{{depoimento.avatar}}" >
+        <img mat-card-sm-image src="{{depoimento.avatar}}" alt="Icone depoimento avatar">
         <ul>
             <li>{{ depoimento.texto }}</li>
             <li><strong>{{ depoimento.autor }}</strong></li>
