--- a/src/app/shared/form-base/form-base.component.html
+++ b/src/app/shared/form-base/form-base.component.html
@@ -69,7 +69,7 @@
           </div>
           <div class="grid-item">
             <div class="radio-group">
-              <label>Gênero</label>
+              <mat-label>Gênero</mat-label>
               <mat-radio-group color="primary" formControlName="genero">
                 <mat-radio-button value="feminino">Feminino</mat-radio-button>
                 <mat-radio-button value="masculino">Masculino</mat-radio-button>
